--- a/produse/template/product.html
+++ b/produse/template/product.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -15,7 +16,7 @@
  		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
 
  		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}"/>
  		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
 
  		<!-- nouislider -->
