--- a/template/product.html
+++ b/template/product.html
@@ -4,29 +4,29 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Electro - HTML Ecommerce Template</title>
+		<title>Peeak & Boo - HTML Ecommerce Template</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
  		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}"/>
 
  		<!-- Slick -->
  		<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}"/>
- 		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css' %}"/>
 
  		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{%  static 'css/nouislider.min.css' %}"/>
 
  		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="css/font-awesome.min.css">
+ 		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{%  static 'css/style.css'  %}"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,12 +40,12 @@
 		<!-- HEADER -->
 		<header>
 			<!-- TOP HEADER -->
-			<div id="top-header">
-				<div class="container">
+			<div id="header">
+				<div class="table">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i> +0721955384</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> andreisionut53@yahoo.com</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i> stradela silvetrsu nr.1</a></li>
 					</ul>
 					<ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
@@ -58,14 +58,17 @@
 			<!-- MAIN HEADER -->
 			<div id="header">
 				<!-- container -->
-				<div class="container">
+				<div class="fieldBox">
 					<!-- row -->
 					<div class="row">
 						<!-- LOGO -->
 						<div class="col-md-3">
 							<div class="header-logo">
-								<a href="#" class="logo">
-									<img src="./img/logo.png" alt="">
+								<a href=" " class="logo">
+									<img src="{% static 'img/logo_peak.png.jpg'  %}"  alt=" "
+                                    width="250"
+                                    height="120"
+                                     >
 								</a>
 							</div>
 						</div>
@@ -111,7 +114,7 @@
 										<div class="cart-list">
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product01.png" alt="">
+													<img src="{% static 'img/product01.png' %}" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -122,7 +125,7 @@
 
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product02.png" alt="">
+													<img src="{% static 'img/product02.png' %}" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -219,19 +222,19 @@
 					<div class="col-md-5 col-md-push-2">
 						<div id="product-main-img">
 							<div class="product-preview">
-								<img src="./img/product01.png" alt="">
+								<img src="{% static 'img/product01.png' %}" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="./img/product03.png" alt="">
+								<img src="{% static 'img/product03.png' %}" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="./img/product06.png" alt="">
+								<img src="{% static 'img/product06.png' %}" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="./img/product08.png" alt="">
+								<img src="{% static 'img/product08.png' %}" alt="">
 							</div>
 						</div>
 					</div>
@@ -241,19 +244,19 @@
 					<div class="col-md-2  col-md-pull-5">
 						<div id="product-imgs">
 							<div class="product-preview">
-								<img src="./img/product01.png" alt="">
+								<img src="{% static 'img/product01.png' %}" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="./img/product03.png" alt="">
+								<img src="{% static 'img/product03.png' %}" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="./img/product06.png" alt="">
+								<img src="{% static 'img/product06.png' %}" alt="">
 							</div>
 
 							<div class="product-preview">
-								<img src="./img/product08.png" alt="">
+								<img src="{% static 'img/product08.png' %}" alt="">
 							</div>
 						</div>
 					</div>
@@ -567,7 +570,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/product01.png" alt="">
+								<img src="{% static 'img/product01.png' %}" alt="">
 								<div class="product-label">
 									<span class="sale">-30%</span>
 								</div>
@@ -595,7 +598,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/product02.png" alt="">
+								<img src="{% static 'img/product02.png' %}" alt="">
 								<div class="product-label">
 									<span class="new">NEW</span>
 								</div>
@@ -630,7 +633,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/product03.png" alt="">
+								<img src="{%  static 'img/product03.png' %}" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Category</p>
@@ -660,7 +663,7 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/product04.png" alt="">
+								<img src="{% static 'img/product04.png' %}" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Category</p>
@@ -821,12 +824,12 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="{% static 'js/jquery.min.js' %}"></script>
+		<script src="{% static 'js/bootstrap.min.js' %}"></script>
+		<script src=" {% static 'js/slick.min.js' %} "></script>
+		<script src=" {% static 'js/nouislider.min.js' %}"></script>
+		<script src=" {% static 'js/jquery.zoom.min.js' %}"></script>
+		<script src=" {% static 'js/main.js' %}"></script>
 
 	</body>
 </html>
